--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 	<p></p>
 	<p>This Accelerator is configured to allow you to drill back to your Source Application (Salesforce Service Cloud or other) and deep-dive to each case.</p>
 	<p></p>
-	<p>Please ask your Tableau Administrator to configure the link (update the attributes "URL Drill-back to Source Application: Prefix" et "URL Drill-back to Source Application: Suffix" in the Tableau Workbook file).</p>
+	<p>Please ask your Tableau Administrator to configure the link (update the attributes "URL Drill-back to Source Application: Prefix" and "URL Drill-back to Source Application: Suffix" in the Tableau Workbook file).</p>
 	  </body>
 </html>
