--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Drill to your Source Application!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Drill to your Source Application!</title>
+    <script>
+		function getParameter(parameterName){
+			let parameters = new URLSearchParams(window.location.search);
+			return parameters.get(parameterName);
+			}
+  </script>
   </head>
   <body>
-	<object data="logo-salesforce.svg" width="80" height="80"> </object>
-	<p></p>
-	<p></p>
-	<h4>Case: </h4>
-	<p></p>
-	<p>This Accelerator is configured to allow you to drill back to your Source Application (Salesforce Service Cloud or other) and deep-dive to each case.</p>
-	<p></p>
-	<p>Please ask your Tableau Administrator to configure the link (update the attributes "URL Drill-back to Source Application: Prefix" and "URL Drill-back to Source Application: Suffix" in the Tableau Workbook file).</p>
-	  </body>
+		<object data="logo-salesforce.svg" width="80" height="80"> </object>
+		<p></p>
+		<p></p>
+		<h4>Case: 
+		<script>
+		var param=getParameter('Case');	
+		document.write(param);              	
+		</script> 			
+	  	</h4>
+		<p></p>
+		<p>This Accelerator is configured to allow you to drill back to your Source Application (Salesforce Service Cloud or other) and deep-dive to each case.</p>
+		<p></p>
+		<p>Please ask your Tableau Administrator to configure the link (update the attributes <b>"URL Drill-back to Source Application: Prefix"</b> and <b>"URL Drill-back to Source Application: Suffix"</b> in the Tableau Workbook file).</p>
+	</body>
 </html>
